--- a/pages/19524.html
+++ b/pages/19524.html
@@ -317,10 +317,16 @@ margin-left: 0em;
 </li>
 </ul>
 
-<h2 id='related_lab_entries'>related <math class='maruku-mathml' display='inline' id='mathml_5728e7e61f56cf99571aeb74528b156c7107a577_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
+<h2 id='related_lab_entries'>related <math class='maruku-mathml' display='inline' id='mathml_a9066d5e90c4f4e6bda51b96cb0f2dc40f5228a7_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/inhomogeneous+cosmology'>inhomogeneous cosmology</a></li>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/inhomogeneous+cosmology'>inhomogeneous cosmology</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/standard+model+of+cosmology'>standard model of cosmology</a></p>
+</li>
 </ul>
 
 <p><div class='property'> category: <a class='category_link' href='/nlab/list/people'>people</a></div></p>
@@ -328,14 +334,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on July 13, 2018 at 19:24:58.
+  Last revised on July 14, 2018 at 05:10:13.
   See the <a href="https://ncatlab.org/nlab/history/Thomas Buchert" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Thomas+Buchert" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Thomas+Buchert/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Thomas+Buchert" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Thomas+Buchert" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Thomas+Buchert" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Thomas+Buchert/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/Thomas+Buchert" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Thomas+Buchert" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Thomas Buchert/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
