--- a/pages/8221.html
+++ b/pages/8221.html
@@ -290,12 +290,11 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -471,7 +470,7 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/finite+quantum+mechanics+in+terms+of+dagger-compact+categories'>in terms of †-compact categories</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/finite+quantum+mechanics+in+terms+of+dagger-compact+categories'>in terms of ∞-compact categories</a></p>
 </li>
 
 <li>
@@ -771,7 +770,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/6d+%282%2C0%29-supersymmetric+QFT'>6d (2,0)-supersymmetric QFT</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/6d+%282%2C0%29-superconformal+QFT'>6d (2,0)-supersymmetric QFT</a></p>
 </li>
 </ul>
 </li>
@@ -1090,7 +1089,7 @@ margin-left: 0em;
 
 <p>The standard <a class='existingWikiWord' href='/nlab/show/model+%28in+theoretical+physics%29'>model (in theoretical physics)</a> for the <a class='existingWikiWord' href='/nlab/show/observable+universe'>observable universe</a> on the largest length scales of <a class='existingWikiWord' href='/nlab/show/cosmology'>cosmology</a>:</p>
 
-<p>it is an <a class='existingWikiWord' href='/nlab/show/cosmic+inflation'>inflationary</a> <a class='existingWikiWord' href='/nlab/show/FRW+model'>FRW spacetime</a> with <a class='existingWikiWord' href='/nlab/show/cosmological+constant'>cosmological constant</a> (“<a class='existingWikiWord' href='/nlab/show/cosmological+constant'>dark energy</a>”) and cold <a class='existingWikiWord' href='/nlab/show/dark+matter'>dark matter</a>. The technical term for this is the <em><math class='maruku-mathml' display='inline' id='mathml_5673373f4c82dbd5422a2389692e3279c84ec20a_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Λ</mi></mrow><annotation encoding='application/x-tex'>\Lambda</annotation></semantics></math> CDM concordance model</em> (where “<math class='maruku-mathml' display='inline' id='mathml_5673373f4c82dbd5422a2389692e3279c84ec20a_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Λ</mi></mrow><annotation encoding='application/x-tex'>\Lambda</annotation></semantics></math>” is the standard symbol for the <a class='existingWikiWord' href='/nlab/show/cosmological+constant'>cosmological constant</a> and “CDM” is for “cold dark matter”).</p>
+<p>it is an <a class='existingWikiWord' href='/nlab/show/cosmic+inflation'>inflationary</a> <a class='existingWikiWord' href='/nlab/show/FRW+model'>FRW spacetime</a> with <a class='existingWikiWord' href='/nlab/show/cosmological+constant'>cosmological constant</a> (“<a class='existingWikiWord' href='/nlab/show/cosmological+constant'>dark energy</a>”) and cold <a class='existingWikiWord' href='/nlab/show/dark+matter'>dark matter</a>. The technical term for this is the <em><math class='maruku-mathml' display='inline' id='mathml_c89f2d27f28560744bdeb4b09332bece757a82bd_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Λ</mi></mrow><annotation encoding='application/x-tex'>\Lambda</annotation></semantics></math> CDM concordance model</em> (where “<math class='maruku-mathml' display='inline' id='mathml_c89f2d27f28560744bdeb4b09332bece757a82bd_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Λ</mi></mrow><annotation encoding='application/x-tex'>\Lambda</annotation></semantics></math>” is the standard symbol for the <a class='existingWikiWord' href='/nlab/show/cosmological+constant'>cosmological constant</a> and “CDM” is for “cold dark matter”).</p>
 
 <p>The current model assumes that the energy density of the <a class='existingWikiWord' href='/nlab/show/observable+universe'>observable universe</a> consists of</p>
 
@@ -1130,6 +1129,10 @@ margin-left: 0em;
 </li>
 
 <li>
+<p><a class='existingWikiWord' href='/nlab/show/structure+formation'>structure formation</a>, <a class='existingWikiWord' href='/nlab/show/inhomogeneous+cosmology'>inhomogeneous cosmology</a></p>
+</li>
+
+<li>
 <p><a class='existingWikiWord' href='/nlab/show/baryogenesis'>baryogenesis</a></p>
 </li>
 
@@ -1148,9 +1151,9 @@ margin-left: 0em;
 
 <p><strong><a class='existingWikiWord' href='/nlab/show/standard+model+of+particle+physics'>standard model of particle physics</a> <a class='existingWikiWord' href='/nlab/show/standard+model+of+cosmology'>and cosmology</a></strong></p>
 <table><thead><tr><th><a class='existingWikiWord' href='/nlab/show/theory+%28physics%29'>theory</a>:</th><th><a class='existingWikiWord' href='/nlab/show/Einstein-Hilbert+action'>Einstein</a>-</th><th><a class='existingWikiWord' href='/nlab/show/Einstein-Yang-Mills+theory'>Yang-Mills</a>-</th><th><a class='existingWikiWord' href='/nlab/show/Einstein-Yang-Mills-Dirac+theory'>Dirac</a>-</th><th><a class='existingWikiWord' href='/nlab/show/Einstein-Yang-Mills-Dirac-Higgs+theory'>Higgs</a></th></tr></thead><tbody><tr><td style='text-align: left;'></td><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/gravity'>gravity</a></td><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/electroweak+field'>electroweak</a> and <a class='existingWikiWord' href='/nlab/show/nuclear+force'>strong nuclear force</a></td><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/fermion'>fermionic</a> <a class='existingWikiWord' href='/nlab/show/matter'>matter</a></td><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/scalar+field'>scalar field</a></td></tr>
-<tr><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>field</a> content:</td><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/vielbein'>vielbein field</a> <math class='maruku-mathml' display='inline' id='mathml_5673373f4c82dbd5422a2389692e3279c84ec20a_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>e</mi></mrow><annotation encoding='application/x-tex'>e</annotation></semantics></math></td><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/principal+connection'>principal connection</a> <math class='maruku-mathml' display='inline' id='mathml_5673373f4c82dbd5422a2389692e3279c84ec20a_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>∇</mo></mrow><annotation encoding='application/x-tex'>\nabla</annotation></semantics></math></td><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/spinor+bundle'>spinor</a> <math class='maruku-mathml' display='inline' id='mathml_5673373f4c82dbd5422a2389692e3279c84ec20a_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ψ</mi></mrow><annotation encoding='application/x-tex'>\psi</annotation></semantics></math></td><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/scalar+field'>scalar field</a> <math class='maruku-mathml' display='inline' id='mathml_5673373f4c82dbd5422a2389692e3279c84ec20a_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>H</mi></mrow><annotation encoding='application/x-tex'>H</annotation></semantics></math></td></tr>
+<tr><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>field</a> content:</td><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/vielbein'>vielbein field</a> <math class='maruku-mathml' display='inline' id='mathml_c89f2d27f28560744bdeb4b09332bece757a82bd_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>e</mi></mrow><annotation encoding='application/x-tex'>e</annotation></semantics></math></td><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/principal+connection'>principal connection</a> <math class='maruku-mathml' display='inline' id='mathml_c89f2d27f28560744bdeb4b09332bece757a82bd_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>∇</mo></mrow><annotation encoding='application/x-tex'>\nabla</annotation></semantics></math></td><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/spinor+bundle'>spinor</a> <math class='maruku-mathml' display='inline' id='mathml_c89f2d27f28560744bdeb4b09332bece757a82bd_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ψ</mi></mrow><annotation encoding='application/x-tex'>\psi</annotation></semantics></math></td><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/scalar+field'>scalar field</a> <math class='maruku-mathml' display='inline' id='mathml_c89f2d27f28560744bdeb4b09332bece757a82bd_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>H</mi></mrow><annotation encoding='application/x-tex'>H</annotation></semantics></math></td></tr>
 <tr><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/Lagrangian+density'>Lagrangian</a>:</td><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/scalar+curvature'>scalar curvature</a> density</td><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/field+strength'>field strength</a> squared</td><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/Dirac+operator'>Dirac operator</a> component density</td><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/field+strength'>field strength</a> squared + potential density</td></tr>
-<tr><td style='text-align: left;'><math class='maruku-mathml' display='inline' id='mathml_5673373f4c82dbd5422a2389692e3279c84ec20a_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>L</mi><mo>=</mo></mrow><annotation encoding='application/x-tex'>L = </annotation></semantics></math></td><td style='text-align: left;'><math class='maruku-mathml' display='inline' id='mathml_5673373f4c82dbd5422a2389692e3279c84ec20a_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>R</mi><mo stretchy='false'>(</mo><mi>e</mi><mo stretchy='false'>)</mo><mi>vol</mi><mo stretchy='false'>(</mo><mi>e</mi><mo stretchy='false'>)</mo><mo>+</mo></mrow><annotation encoding='application/x-tex'>R(e) vol(e) + </annotation></semantics></math></td><td style='text-align: left;'><math class='maruku-mathml' display='inline' id='mathml_5673373f4c82dbd5422a2389692e3279c84ec20a_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>⟨</mo><msub><mi>F</mi> <mo>∇</mo></msub><mo>∧</mo><msub><mo>⋆</mo> <mi>e</mi></msub><msub><mi>F</mi> <mo>∇</mo></msub><mo stretchy='false'>⟩</mo><mo>+</mo></mrow><annotation encoding='application/x-tex'>\langle F_\nabla \wedge \star_e F_\nabla\rangle + </annotation></semantics></math></td><td style='text-align: left;'><math class='maruku-mathml' display='inline' id='mathml_5673373f4c82dbd5422a2389692e3279c84ec20a_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mi>ψ</mi><mo>,</mo><msub><mi>D</mi> <mrow><mo stretchy='false'>(</mo><mi>e</mi><mo>,</mo><mo>∇</mo><mo stretchy='false'>)</mo></mrow></msub><mi>ψ</mi><mo stretchy='false'>)</mo><mi>vol</mi><mo stretchy='false'>(</mo><mi>e</mi><mo stretchy='false'>)</mo><mo>+</mo></mrow><annotation encoding='application/x-tex'> (\psi , D_{(e,\nabla)} \psi) vol(e) + </annotation></semantics></math></td><td style='text-align: left;'><math class='maruku-mathml' display='inline' id='mathml_5673373f4c82dbd5422a2389692e3279c84ec20a_11' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>∇</mo><mover><mi>H</mi><mo stretchy='false'>¯</mo></mover><mo>∧</mo><msub><mo>⋆</mo> <mi>e</mi></msub><mo>∇</mo><mi>H</mi><mo>+</mo><mrow><mo>(</mo><mi>λ</mi><msup><mrow><mo stretchy='false'>|</mo><mi>H</mi><mo stretchy='false'>|</mo></mrow> <mn>4</mn></msup><mo>−</mo><msup><mi>μ</mi> <mn>2</mn></msup><msup><mrow><mo stretchy='false'>|</mo><mi>H</mi><mo stretchy='false'>|</mo></mrow> <mn>2</mn></msup><mo>)</mo></mrow><mi>vol</mi><mo stretchy='false'>(</mo><mi>e</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'> \nabla \bar H \wedge \star_e \nabla H  + \left(\lambda  {\vert H\vert}^4 - \mu^2 {\vert H\vert}^2 \right) vol(e) </annotation></semantics></math></td></tr>
+<tr><td style='text-align: left;'><math class='maruku-mathml' display='inline' id='mathml_c89f2d27f28560744bdeb4b09332bece757a82bd_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>L</mi><mo>=</mo></mrow><annotation encoding='application/x-tex'>L = </annotation></semantics></math></td><td style='text-align: left;'><math class='maruku-mathml' display='inline' id='mathml_c89f2d27f28560744bdeb4b09332bece757a82bd_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>R</mi><mo stretchy='false'>(</mo><mi>e</mi><mo stretchy='false'>)</mo><mi>vol</mi><mo stretchy='false'>(</mo><mi>e</mi><mo stretchy='false'>)</mo><mo>+</mo></mrow><annotation encoding='application/x-tex'>R(e) vol(e) + </annotation></semantics></math></td><td style='text-align: left;'><math class='maruku-mathml' display='inline' id='mathml_c89f2d27f28560744bdeb4b09332bece757a82bd_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>⟨</mo><msub><mi>F</mi> <mo>∇</mo></msub><mo>∧</mo><msub><mo>⋆</mo> <mi>e</mi></msub><msub><mi>F</mi> <mo>∇</mo></msub><mo stretchy='false'>⟩</mo><mo>+</mo></mrow><annotation encoding='application/x-tex'>\langle F_\nabla \wedge \star_e F_\nabla\rangle + </annotation></semantics></math></td><td style='text-align: left;'><math class='maruku-mathml' display='inline' id='mathml_c89f2d27f28560744bdeb4b09332bece757a82bd_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mi>ψ</mi><mo>,</mo><msub><mi>D</mi> <mrow><mo stretchy='false'>(</mo><mi>e</mi><mo>,</mo><mo>∇</mo><mo stretchy='false'>)</mo></mrow></msub><mi>ψ</mi><mo stretchy='false'>)</mo><mi>vol</mi><mo stretchy='false'>(</mo><mi>e</mi><mo stretchy='false'>)</mo><mo>+</mo></mrow><annotation encoding='application/x-tex'> (\psi , D_{(e,\nabla)} \psi) vol(e) + </annotation></semantics></math></td><td style='text-align: left;'><math class='maruku-mathml' display='inline' id='mathml_c89f2d27f28560744bdeb4b09332bece757a82bd_11' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>∇</mo><mover><mi>H</mi><mo stretchy='false'>¯</mo></mover><mo>∧</mo><msub><mo>⋆</mo> <mi>e</mi></msub><mo>∇</mo><mi>H</mi><mo>+</mo><mrow><mo>(</mo><mi>λ</mi><msup><mrow><mo stretchy='false'>|</mo><mi>H</mi><mo stretchy='false'>|</mo></mrow> <mn>4</mn></msup><mo>−</mo><msup><mi>μ</mi> <mn>2</mn></msup><msup><mrow><mo stretchy='false'>|</mo><mi>H</mi><mo stretchy='false'>|</mo></mrow> <mn>2</mn></msup><mo>)</mo></mrow><mi>vol</mi><mo stretchy='false'>(</mo><mi>e</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'> \nabla \bar H \wedge \star_e \nabla H  + \left(\lambda  {\vert H\vert}^4 - \mu^2 {\vert H\vert}^2 \right) vol(e) </annotation></semantics></math></td></tr>
 </tbody></table>
 <h2 id='references'>References</h2>
 
@@ -1171,7 +1174,13 @@ margin-left: 0em;
 <p>A discussion of open problems is in</p>
 
 <ul>
-<li>Benoit Famaey, Stacy McGaugh, <em>Challenges for Lambda-CDM and MOND</em> (<a href='http://arxiv.org/abs/1301.0623'>arXiv:1301.0623</a>)</li>
+<li>
+<p>Benoit Famaey, Stacy McGaugh, <em>Challenges for Lambda-CDM and MOND</em> (<a href='http://arxiv.org/abs/1301.0623'>arXiv:1301.0623</a>)</p>
+</li>
+
+<li id='BCKRW15'>
+<p><a class='existingWikiWord' href='/nlab/show/Thomas+Buchert'>Thomas Buchert</a>, Alan A. Coley, <a class='existingWikiWord' href='/nlab/show/Hagen+Kleinert'>Hagen Kleinert</a>, Boudewijn F. Roukema, David L. Wiltshire, <em>Observational Challenges for the Standard FLRW Model</em>, Int. J. Mod. Phys. D 25, 1630007 (2016) (<a href='https://arxiv.org/abs/1512.03313'>arXiv:1512.03313</a>)</p>
+</li>
 </ul>
 
 <p>See also</p>
@@ -1208,19 +1217,20 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on February  9, 2018 09:48:24 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (195.229.110.1)
+  <p>
+  Last revised on July 14, 2018 at 05:07:49.
+  See the <a href="https://ncatlab.org/nlab/history/standard model of cosmology" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/standard+model+of+cosmology" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/standard+model+of+cosmology/17" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(17 revisions)</span> | <a href="/nlab/show/diff/standard+model+of+cosmology" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/standard+model+of+cosmology" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  
+  <a href="/nlab/edit/standard+model+of+cosmology" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/standard+model+of+cosmology/18" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(18 revisions)</span> | <a href="/nlab/show/diff/standard+model+of+cosmology" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/standard+model+of+cosmology" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  | <a href="https://ncatlab.org/nlab/show/standard model of cosmology/cite" style="color: black">Cite</a>
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/standard+model+of+cosmology" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/standard+model+of+cosmology" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/standard+model+of+cosmology" id="view_source" rel="nofollow">Source</a>
