--- a/pages/8335.html
+++ b/pages/8335.html
@@ -917,6 +917,10 @@ margin-left: 0em;
 </li>
 
 <li>
+<p><a class='existingWikiWord' href='/nlab/show/inhomogeneous+cosmology'>inhomogeneous cosmology</a></p>
+</li>
+
+<li>
 <p><a class='existingWikiWord' href='/nlab/show/dark+radiation'>dark radiation</a></p>
 </li>
 
@@ -946,7 +950,7 @@ margin-left: 0em;
 <h3 id='on_the_hydron_line'>On the hydron line</h3>
 
 <ul>
-<li id='HiganRees79'>C. J. Hogan, <a class='existingWikiWord' href='/nlab/show/Martin+Rees'>Martin Rees</a>, <em>Spectral appearance of non-uniform gas at high <math class='maruku-mathml' display='inline' id='mathml_11119ceabfe9b4ee4f319027a23f2a32f5ba58bc_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>z</mi></mrow><annotation encoding='application/x-tex'>z</annotation></semantics></math></em>, Monthly Notices of the Royal Astronomical Society, Volume 188, Issue 4, 1 October 1979, Pages 791–798 (<a href='https://doi.org/10.1093/mnras/188.4.791'>doi:10.1093/mnras/188.4.791</a>)</li>
+<li id='HiganRees79'>C. J. Hogan, <a class='existingWikiWord' href='/nlab/show/Martin+Rees'>Martin Rees</a>, <em>Spectral appearance of non-uniform gas at high <math class='maruku-mathml' display='inline' id='mathml_a9dda590b568cbc473a16582183b33b78924cfb9_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>z</mi></mrow><annotation encoding='application/x-tex'>z</annotation></semantics></math></em>, Monthly Notices of the Royal Astronomical Society, Volume 188, Issue 4, 1 October 1979, Pages 791–798 (<a href='https://doi.org/10.1093/mnras/188.4.791'>doi:10.1093/mnras/188.4.791</a>)</li>
 </ul>
 
 <p>A claim of detection of the cosmological signal by the <a class='existingWikiWord' href='/nlab/show/EDGES'>EDGES</a> <a class='existingWikiWord' href='/nlab/show/experimental+observation'>experiment</a> is due to</p>
@@ -970,14 +974,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on July 10, 2018 at 04:03:24.
+  Last revised on July 14, 2018 at 05:46:59.
   See the <a href="https://ncatlab.org/nlab/history/cosmic microwave background radiation" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/cosmic+microwave+background+radiation" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/cosmic+microwave+background+radiation/6" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(6 revisions)</span> | <a href="/nlab/show/diff/cosmic+microwave+background+radiation" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/cosmic+microwave+background+radiation" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/cosmic+microwave+background+radiation" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/cosmic+microwave+background+radiation/7" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(7 revisions)</span> | <a href="/nlab/show/diff/cosmic+microwave+background+radiation" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/cosmic+microwave+background+radiation" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/cosmic microwave background radiation/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
